# wavetable-synth

./: .gitignore  Cargo.toml  README.md  justfile  vcocalc.py
.github/workflows/: rust-release.yml  rust.yml
examples/: desktop-cli.rs
src/: common.rs  lfo.rs  lib.rs  sequencer.rs  voice.rs
src/config/: mod.rs
src/config/configs/: desktop.rs  embeded.rs
src/effects/: chorus.rs  mod.rs  reverb.rs
src/synth_engines/: mod.rs
src/synth_engines/organ/: mod.rs  organ.rs  osc.rs
src/synth_engines/synth/: mod.rs  osc.rs  saw_tooth.rs  synth.rs
src/synth_engines/synth_common/: env.rs  lfo.rs  mod.rs  moog_filter.rs  osc.rs
src/synth_engines/wurlitzer/: mod.rs  note_osc.rs
wavetable-synth.lib/: Cargo.toml  README.md  justfile
wavetable-synth.lib/src/: lfo.rs  lib.rs  voice.rs
wavetable-synth.lib/src/config/: mod.rs
wavetable-synth.lib/src/config/configs/: android.rs  desktop.rs
wavetable-synth.lib/src/effects/: chorus.rs  reverb.rs
wavetable-synth.lib/src/synth_engines/: mod.rs
wavetable-synth.lib/src/synth_engines/synth/: mod.rs  osc.rs
wavetable-synth.lib/src/synth_engines/synth_common/: biquad_filter.rs  env.rs  moog_filter.rs
wavetable-synth.lib/wt-synth-examples/pico-1-synth/.cargo/: config.toml.pico-2
wavetable-synth.lib/wt-synth-examples/pico-1-synth/src/: vreg.rs
wavetable-synth.lib/wt-synth-examples/pico-2-synth/: Cargo.toml
wavetable-synth.lib/wt-synth-examples/pico-2-synth/.cargo/: config.toml.pico-2
wavetable-synth.lib/wt-synth-examples/pico-2-synth/src/: i2s.pio  lib.rs  vreg.rs
wavetable-synth.plugin/: .gitignore  Cargo.toml  README.md  bundler.toml  justfile
wavetable-synth.plugin/src/: lib.rs  main.rs
wt-synth-examples/desktop-cli/: Cargo.toml
wt-synth-examples/desktop-cli/src/: main.rs
wt-synth-examples/pico-1-synth/.cargo/: config.toml
wt-synth-examples/pico-1-synth/src/: lib.rs
wt-synth-examples/pico-2-synth/: i2s-test.uf2  justfile
wt-synth-examples/pico-2-synth/.cargo/: config.toml.pico-1
wt-synth-examples/pico-2-synth/src/: audio_i2s.pio  lib.rs  pll_settings.rs
wt-synth-examples/pico-synth/: Cargo.toml  justfile
wt-synth-examples/pico-synth/src/: lib.rs  pio-i2s.pio  pll_settings.rs
