[package]
name = "wavetable-synth"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop"]
# pyo3 = ["dep:pyo3"]
desktop = [
  # "dep:tinyaudio",
  "dep:midir",
  "std",
]
embeded = []
std = []

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
array-macro = "2.1.8"
enum_dispatch = "0.3.13"
fern = { version = "0.7.1", features = ["colored"] }
fxhash = "0.2.1"
log = { version = "0.4.25", features = ["max_level_info", "release_max_level_info"] }
midi-control = "0.2.2"
midir = { version = "0.10.1", optional = true }
# pyo3 = { version = "0.23.3", optional = true }
reverb = "1.0.47"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
# tinyaudio = { version = "1.1.0", optional = true }

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
tinyaudio = "1.1.0"

[[example]]
name = "desktop-cli"
doc-scrape-examples = true
required-features = ["desktop"]


