[package]
name = "wavetable-synth"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop"]
# pyo3 = ["dep:pyo3"]
desktop = [
  # "dep:tinyaudio",
  "dep:midir",
  "dep:fxhash",
  "dep:fern",
  "dep:midi-control",
  "std",
]
embeded = [
  "dep:libm",
]
std = []

[dependencies]
anyhow = { version = "1.0.95", default-features = false }
array-macro = "2.1.8"
enum_dispatch = "0.3.13"
fern = { version = "0.7.1", features = ["colored"], optional = true }
fxhash = { version = "0.2.1", optional = true }
libm = { version = "0.2.11", optional = true }
log = { version = "0.4.25", features = ["max_level_info", "release_max_level_info"] }
midi-control = { version = "0.2.2", default-features = false, optional = true }
midir = { version = "0.10.1", optional = true }
# reverb = "1.0.47"
serde = { version = "1.0.217", features = ["derive"], default-features = false }
strum = { version = "0.26.3", features = ["derive"], default-features = false }

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
tinyaudio = "1.1.0"

[[example]]
name = "desktop-cli"
doc-scrape-examples = true
required-features = ["desktop"]


