[package]
name = "wt_synth"
version = "0.1.0"
edition = "2021"
authors = ["Calacuda <your@email.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/calacuda/wavetable-synth"
description = "a wavetable synth"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
standalone = ["nih_plug/standalone"]

[dependencies]
biquad = "0.5.0"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
#   "assert_process_allocs",
#   "standalone",
# ] }
nih_plug = { git = "https://github.com/calacuda/nih-plug.git", features = [
  "assert_process_allocs",
  # "standalone",
] }
wavetable-synth = { version = "0.1.1", path = "../wavetable-synth.lib/", features = [
  "desktop",
] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
